<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dip"

            android:background="@color/white"
            android:text="@string/take_photo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="0dp"

            android:background="@color/white"
            android:text="@string/pick_photo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dip"

            android:background="@color/white"
            android:text="@string/cancle"
            android:textColor="@color/grey"

            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>